--- a/notebooks/SequenceWithinPuzzles.ipynb
+++ b/notebooks/SequenceWithinPuzzles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataEvents = pd.read_csv('/Users/manuelgomezmoratilla/Desktop/TFG/data_processing_scripts/data/anonamyze_all_data_collection_v2.csv', sep=\";\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,15 +181,13 @@
     "                if ((igual == True) and (prev in listEvent)):\n",
     "                    add = currentAction[0]\n",
     "                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                    add['n_times'] = dict()\n",
-    "                    add['n_times'][add['type']] = len(currentAction)\n",
+    "                    add['n_times'] = len(currentAction)\n",
     "                    dataConvert2.append(add)\n",
     "                    currentAction.clear()\n",
     "                    currentAction.append(event)     \n",
     "                else: #igual != True \n",
     "                    for a in currentAction:\n",
-    "                        a['n_times'] = dict()\n",
-    "                        a['n_times'][a['type']] = 1\n",
+    "                        a['n_times'] = 1\n",
     "                        dataConvert2.append(a)\n",
     "                    currentAction.clear()\n",
     "                    currentAction.append(event)\n",
@@ -188,8 +195,7 @@
     "                if (event['type'] not in listEvent):\n",
     "                    currentAction.append(event)\n",
     "                    for a in currentAction:\n",
-    "                        a['n_times'] = dict()\n",
-    "                        a['n_times'][a['type']] = 1\n",
+    "                        a['n_times'] = 1\n",
     "                        dataConvert2.append(a)\n",
     "                    currentAction.clear()\n",
     "                    \n",
@@ -202,8 +208,7 @@
     "                                else:\n",
     "                                    add = currentAction[0]\n",
     "                                    #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                                    add['n_times'] = dict()\n",
-    "                                    add['n_times'][add['type']] = len(currentAction)\n",
+    "                                    add['n_times'] = len(currentAction)\n",
     "                                    dataConvert2.append(add)\n",
     "                                    currentAction.clear()\n",
     "                                    currentAction.append(event)\n",
@@ -231,15 +236,13 @@
     "            if ((igual == True) and (prev in listEvent)):\n",
     "                add = currentAction[0]\n",
     "                #add['type'] = add['type'] + 'x' + str(len(currentAction))\n",
-    "                add['n_times'] = dict()\n",
-    "                add['n_times'][add['type']] = len(currentAction)\n",
+    "                add['n_times'] = len(currentAction)\n",
     "                dataConvert2.append(add)\n",
     "                currentAction.clear()\n",
     "                currentAction.append(event)     \n",
     "            else: #igual != True \n",
     "                for a in currentAction:\n",
-    "                    a['n_times'] = dict()\n",
-    "                    a['n_times'][a['type']] = 1\n",
+    "                    a['n_times'] = 1\n",
     "                    dataConvert2.append(a)\n",
     "                currentAction.clear()\n",
     "                currentAction.append(event)\n",
@@ -266,13 +269,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group_id</th>\n",
+       "      <th>user</th>\n",
+       "      <th>task_id</th>\n",
+       "      <th>n_attempt</th>\n",
+       "      <th>type</th>\n",
+       "      <th>n_times</th>\n",
+       "      <th>metadata</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>409376</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-create_shape</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409415</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-rotate_shape</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409470</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-create_shape</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409524</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-rotate_shape</td>\n",
+       "      <td>2</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>409679</th>\n",
+       "      <td>cb71040b5bd1341a34afc24961536ebd</td>\n",
+       "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
+       "      <td>Sugar Cones</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396953</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ws-rotate_view</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>396987</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>4</td>\n",
+       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397091</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'shape_id': 1, 'shape_type': 6}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397103</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>1</td>\n",
+       "      <td>{'shape_id': 2, 'shape_type': 1}</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>397108</th>\n",
+       "      <td>e21640b4aea9349ad77d86d6017cb061</td>\n",
+       "      <td>eeb4ac2443dd0496ffbefa6780f4d7d4</td>\n",
+       "      <td>Bird Fez</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ws-move_shape</td>\n",
+       "      <td>3</td>\n",
+       "      <td>{'shape_id': 3, 'shape_type': 5}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>71545 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                group_id                              user  \\\n",
+       "409376  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409415  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409470  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409524  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "409679  cb71040b5bd1341a34afc24961536ebd  56ccce25ead834182d605eff319bfa2c   \n",
+       "...                                  ...                               ...   \n",
+       "396953  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "396987  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397091  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397103  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "397108  e21640b4aea9349ad77d86d6017cb061  eeb4ac2443dd0496ffbefa6780f4d7d4   \n",
+       "\n",
+       "            task_id  n_attempt             type  n_times  \\\n",
+       "409376  Sugar Cones          1  ws-create_shape        1   \n",
+       "409415  Sugar Cones          1  ws-rotate_shape        2   \n",
+       "409470  Sugar Cones          1  ws-create_shape        1   \n",
+       "409524  Sugar Cones          1  ws-rotate_shape        2   \n",
+       "409679  Sugar Cones          1    ws-move_shape        1   \n",
+       "...             ...        ...              ...      ...   \n",
+       "396953     Bird Fez          2   ws-rotate_view        1   \n",
+       "396987     Bird Fez          2    ws-move_shape        4   \n",
+       "397091     Bird Fez          2    ws-move_shape        3   \n",
+       "397103     Bird Fez          2    ws-move_shape        1   \n",
+       "397108     Bird Fez          2    ws-move_shape        3   \n",
+       "\n",
+       "                                metadata  \n",
+       "409376  {'shape_id': 1, 'shape_type': 5}  \n",
+       "409415  {'shape_id': 1, 'shape_type': 5}  \n",
+       "409470  {'shape_id': 2, 'shape_type': 5}  \n",
+       "409524  {'shape_id': 2, 'shape_type': 5}  \n",
+       "409679  {'shape_id': 2, 'shape_type': 5}  \n",
+       "...                                  ...  \n",
+       "396953                                {}  \n",
+       "396987  {'shape_id': 3, 'shape_type': 5}  \n",
+       "397091  {'shape_id': 1, 'shape_type': 6}  \n",
+       "397103  {'shape_id': 2, 'shape_type': 1}  \n",
+       "397108  {'shape_id': 3, 'shape_type': 5}  \n",
+       "\n",
+       "[71545 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = sequenceWithinPuzzles(dataEvents)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
