Sequence metrics fixes

--- a/notebooks/sequenceBetweenPuzzles.ipynb
+++ b/notebooks/sequenceBetweenPuzzles.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,36 +61,61 @@
     "                    userPuzzleDict[user_key] = {}\n",
     "                    numPuzzles = 1\n",
     "                if(event['type'] == 'ws-start_level'):\n",
-    "                    #print('\\\\start level\\\\')\n",
-    "                    #print(json.loads(event['data']))\n",
     "                    activePuzzle = json.loads(event['data'])['task_id']\n",
+    "                    if (activePuzzle == 'Sandbox'):\n",
+    "                        continue\n",
     "                    secondKey = str(numPuzzles) + '~' + event['session_id']\n",
-    "                    userPuzzleDict[user_key][secondKey] = {activePuzzle : ''}  \n",
+    "                    if (userPuzzleDict[user_key].get(secondKey) == None):\n",
+    "                        userPuzzleDict[user_key][secondKey] = dict()\n",
+    "                    if (userPuzzleDict[user_key][secondKey].get(activePuzzle) == None):\n",
+    "                        userPuzzleDict[user_key][secondKey] = {activePuzzle : 'started'}\n",
     "                elif(event['type'] == 'ws-puzzle_started'):\n",
+    "                    if (activePuzzle == 'Sandbox' or userPuzzleDict[user_key][secondKey][activePuzzle] in ['started','shape_created', 'submitted', 'completed']):\n",
+    "                        continue\n",
     "                    userPuzzleDict[user_key][secondKey] = {activePuzzle : 'started'}\n",
     "                elif(event['type'] == 'ws-create_shape'):\n",
+    "                    if (activePuzzle == 'Sandbox' or userPuzzleDict[user_key][secondKey][activePuzzle] in ['shape_created', 'submitted', 'completed']):\n",
+    "                        continue\n",
     "                    userPuzzleDict[user_key][secondKey] = {activePuzzle : 'shape_created'}\n",
     "                elif(event['type'] == 'ws-check_solution'):\n",
+    "                    if (activePuzzle == 'Sandbox' or userPuzzleDict[user_key][secondKey][activePuzzle] in ['submitted', 'completed']):\n",
+    "                        continue\n",
     "                    userPuzzleDict[user_key][secondKey] = {activePuzzle :'submitted'}\n",
     "                elif(event['type'] == 'ws-puzzle_complete'):\n",
+    "                    if (activePuzzle == 'Sandbox'):\n",
+    "                        continue\n",
     "                    userPuzzleDict[user_key][secondKey] = {activePuzzle :'completed'}\n",
-    "                elif(event['type'] in ['ws-puzzle_complete', 'ws-exit_to_menu', 'ws-disconnect']):\n",
+    "                elif(event['type'] in ['ws-exit_to_menu', 'ws-disconnect', 'ws-login_user']):\n",
+    "                    if (activePuzzle == 'Sandbox'):\n",
+    "                        continue\n",
     "                    numPuzzles +=1\n",
     "                    \n",
     "    userSessionList = []\n",
     "    for key in userPuzzleDict.keys():\n",
     "        for sequence in userPuzzleDict[key].keys():\n",
     "                key_split = sequence.split('~')\n",
-    "                userSessionList.append([key, key_split[1], key_split[0], userPuzzleDict[key][sequence]])\n",
+    "                userSessionList.append([key, key_split[1], int(key_split[0]), userPuzzleDict[key][sequence]])\n",
     "\n",
     "    userSequence = pd.DataFrame(userSessionList, columns=['user', 'session_id', 'sequence', 'task_id'])\n",
-    "    \n",
-    "    return userSequence"
+    "    #Recalculate sequence\n",
+    "    mod = []\n",
+    "    for user in userSequence['user'].unique():\n",
+    "            previousAttempt = 1\n",
+    "            n_attempt = 1\n",
+    "            individualDf = userSequence[userSequence['user'] == user]\n",
+    "            for enum, event in individualDf.iterrows():\n",
+    "                if (event['sequence'] != previousAttempt):\n",
+    "                    n_attempt += 1\n",
+    "                previousAttempt = event['sequence']\n",
+    "                event['sequence'] = n_attempt\n",
+    "                mod.append(event)\n",
+    "    modDf = pd.DataFrame(mod, columns=['user', 'session_id', 'sequence', 'task_id'])\n",
+    "    return modDf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -122,77 +147,77 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
+       "      <th>0</th>\n",
        "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
        "      <td>kivrsjwpdh2g0zie19hpb2gf0tyj1ufy</td>\n",
        "      <td>1</td>\n",
        "      <td>{'1. One Box': 'completed'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>1</td>\n",
+       "      <th>1</th>\n",
        "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
        "      <td>kivrsjwpdh2g0zie19hpb2gf0tyj1ufy</td>\n",
        "      <td>2</td>\n",
        "      <td>{'2. Separated Boxes': 'completed'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>2</td>\n",
+       "      <th>2</th>\n",
        "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
        "      <td>kivrsjwpdh2g0zie19hpb2gf0tyj1ufy</td>\n",
        "      <td>3</td>\n",
        "      <td>{'3. Rotate a Pyramid': 'completed'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
+       "      <th>3</th>\n",
        "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
        "      <td>kivrsjwpdh2g0zie19hpb2gf0tyj1ufy</td>\n",
        "      <td>4</td>\n",
        "      <td>{'4. Match Silhouettes': 'submitted'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
+       "      <th>4</th>\n",
        "      <td>56ccce25ead834182d605eff319bfa2c</td>\n",
        "      <td>kivrsjwpdh2g0zie19hpb2gf0tyj1ufy</td>\n",
        "      <td>5</td>\n",
        "      <td>{'3. Rotate a Pyramid': 'started'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
+       "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5671</td>\n",
+       "      <th>5796</th>\n",
        "      <td>fb504c1409250aaef610c9d9b7306e18</td>\n",
        "      <td>ukhvuu904a395hg0n7soo81kpnq7llym</td>\n",
        "      <td>6</td>\n",
        "      <td>{'6. Stretch a Ramp': 'completed'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5672</td>\n",
+       "      <th>5797</th>\n",
        "      <td>fb504c1409250aaef610c9d9b7306e18</td>\n",
        "      <td>ukhvuu904a395hg0n7soo81kpnq7llym</td>\n",
        "      <td>7</td>\n",
        "      <td>{'7. Max 2 Boxes': 'submitted'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5673</td>\n",
+       "      <th>5798</th>\n",
        "      <td>5cce64bf55190c8816d80129f875b351</td>\n",
        "      <td>dsx2bjuktwqjcizqqa7y1wiumugyjn86</td>\n",
        "      <td>1</td>\n",
        "      <td>{'1. One Box': 'completed'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5674</td>\n",
+       "      <th>5799</th>\n",
        "      <td>5cce64bf55190c8816d80129f875b351</td>\n",
        "      <td>dsx2bjuktwqjcizqqa7y1wiumugyjn86</td>\n",
        "      <td>2</td>\n",
        "      <td>{'2. Separated Boxes': 'started'}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>5675</td>\n",
+       "      <th>5800</th>\n",
        "      <td>5cce64bf55190c8816d80129f875b351</td>\n",
        "      <td>dsx2bjuktwqjcizqqa7y1wiumugyjn86</td>\n",
        "      <td>3</td>\n",
@@ -200,7 +225,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5676 rows × 4 columns</p>\n",
+       "<p>5801 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -211,29 +236,29 @@
        "3     56ccce25ead834182d605eff319bfa2c  kivrsjwpdh2g0zie19hpb2gf0tyj1ufy   \n",
        "4     56ccce25ead834182d605eff319bfa2c  kivrsjwpdh2g0zie19hpb2gf0tyj1ufy   \n",
        "...                                ...                               ...   \n",
-       "5671  fb504c1409250aaef610c9d9b7306e18  ukhvuu904a395hg0n7soo81kpnq7llym   \n",
-       "5672  fb504c1409250aaef610c9d9b7306e18  ukhvuu904a395hg0n7soo81kpnq7llym   \n",
-       "5673  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
-       "5674  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
-       "5675  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
+       "5796  fb504c1409250aaef610c9d9b7306e18  ukhvuu904a395hg0n7soo81kpnq7llym   \n",
+       "5797  fb504c1409250aaef610c9d9b7306e18  ukhvuu904a395hg0n7soo81kpnq7llym   \n",
+       "5798  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
+       "5799  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
+       "5800  5cce64bf55190c8816d80129f875b351  dsx2bjuktwqjcizqqa7y1wiumugyjn86   \n",
        "\n",
-       "     sequence                                  task_id  \n",
-       "0           1              {'1. One Box': 'completed'}  \n",
-       "1           2      {'2. Separated Boxes': 'completed'}  \n",
-       "2           3     {'3. Rotate a Pyramid': 'completed'}  \n",
-       "3           4    {'4. Match Silhouettes': 'submitted'}  \n",
-       "4           5       {'3. Rotate a Pyramid': 'started'}  \n",
-       "...       ...                                      ...  \n",
-       "5671        6       {'6. Stretch a Ramp': 'completed'}  \n",
-       "5672        7          {'7. Max 2 Boxes': 'submitted'}  \n",
-       "5673        1              {'1. One Box': 'completed'}  \n",
-       "5674        2        {'2. Separated Boxes': 'started'}  \n",
-       "5675        3  {'2. Separated Boxes': 'shape_created'}  \n",
+       "      sequence                                  task_id  \n",
+       "0            1              {'1. One Box': 'completed'}  \n",
+       "1            2      {'2. Separated Boxes': 'completed'}  \n",
+       "2            3     {'3. Rotate a Pyramid': 'completed'}  \n",
+       "3            4    {'4. Match Silhouettes': 'submitted'}  \n",
+       "4            5       {'3. Rotate a Pyramid': 'started'}  \n",
+       "...        ...                                      ...  \n",
+       "5796         6       {'6. Stretch a Ramp': 'completed'}  \n",
+       "5797         7          {'7. Max 2 Boxes': 'submitted'}  \n",
+       "5798         1              {'1. One Box': 'completed'}  \n",
+       "5799         2        {'2. Separated Boxes': 'started'}  \n",
+       "5800         3  {'2. Separated Boxes': 'shape_created'}  \n",
        "\n",
-       "[5676 rows x 4 columns]"
+       "[5801 rows x 4 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +267,22 @@
     "pruebas = sequenceBetweenPuzzles(dataEvents, group = 'all')\n",
     "pruebas"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pruebas.to_csv(\"sequenceBetwennPuzzlesOutput.csv\", decimal = \".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -260,7 +301,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
